--- a/deploy/roles/base/tasks/main.yml
+++ b/deploy/roles/base/tasks/main.yml
@@ -1,3 +1,10 @@
+
+- name: Install aptitude
+  apt:
+    name: aptitude
+    state: latest
+    update_cache: no
+
 - name: Update and upgrade installed packages
   apt:
     update_cache: yes
@@ -14,17 +21,13 @@
     - python3
     - python3-dev
     - python3-pip
+    - python3-venv
+    - nginx
 
-- block:
-  - name: Clone project
-    git:
-      repo: git@github.com:victorfsf/talk-ansible-django.git
-      dest: '{{ app_dir }}'
-      accept_hostkey: yes
-
-  - name: Create virtualenv
-    command: python3 -m venv venv
-    args:
-      chdir: '{{ app_dir }}'
-
+- name: Clone/pull project from {{ branch }}
+  git:
+    repo: git@github.com:victorfsf/talk-ansible-django.git
+    dest: '{{ app_dir }}'
+    version: '{{ branch }}'
+    accept_hostkey: yes
   become_user: '{{ user }}'
