Add nginx handler

--- a/deploy/roles/nginx/tasks/main.yml
+++ b/deploy/roles/nginx/tasks/main.yml
@@ -13,9 +13,4 @@
 
 - name: Check the config syntax
   command: nginx -t
-
-- name: Restart nginx
-  systemd:
-    name: nginx
-    enabled: yes
-    state: restarted
+  notify: Restart nginx
