--- a/deploy/roles/nginx/tasks/main.yml
+++ b/deploy/roles/nginx/tasks/main.yml
@@ -4,12 +4,7 @@
     src: nginx-app.j2
     dest: /etc/nginx/sites-available/app
     owner: '{{ user }}'
-
-- name: Link sites-available to sites-enabled
-  file:
-    src: /etc/nginx/sites-available/app
-    path: /etc/nginx/sites-enabled/app
-    state: link
+  notify: Link sites-available to sites-enabled
 
 - name: Check the config syntax
   command: nginx -t
