--- a/deploy/ansible.cfg
+++ b/deploy/ansible.cfg
@@ -1,5 +1,8 @@
 [defaults]
 transport = ssh
+forks = 10
+internal_poll_interval = 0.001
 
 [ssh_connection]
-ssh_args = -o ForwardAgent=yes
+pipelining = true
+ssh_args = -o ForwardAgent=yes -o ControlMaster=auto -o ControlPersist=60s -o PreferredAuthentications=publickey
